--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,17 +2,25 @@
   <h1  class="text-center"><span>login</span></h1>
   <mat-card-content>
 
-    <form #form="ngForm" class="my-form" (submit)="login()">
+    <form #form="ngForm" name="form" class="my-form" (ngSubmit)="form.form.valid && login() ">
       <mat-form-field class="full-width">
         <mat-label>Email</mat-label>
-        <input matInput [(ngModel)]="user.email" placeholder="Email" name="email" required>
+        <input  matInput [(ngModel)]="user.email" placeholder="Email" name="email" #email="ngModel"  [ngClass]="{ 'is-invalid': form.submitted && email.invalid }" required email>
+        <div *ngIf="form.submitted && email.invalid" class="invalid-feedback">
+          <div *ngIf="email.errors.required">Email is required</div>
+          <div *ngIf="email.errors.email">Email must be a valid email address</div>
+        </div>
       </mat-form-field>
       <mat-form-field class="full-width">
-        <mat-label>Password</mat-label>
-        <input  matInput type="password" [(ngModel)]="user.password" placeholder="Password"  name="password" required>
+        <mat-label  >Password</mat-label >
+        <input  matInput type="password" [(ngModel)]="user.password" placeholder="Password"  name="password" #password="ngModel"  [ngClass]="{ 'is-invalid': form.submitted && password.invalid }" minlength="6"  required>
+        <div *ngIf="form.submitted && password.invalid" class="invalid-feedback">
+          <div *ngIf="password.errors.required">Password is required</div>
+          <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
+        </div>
       </mat-form-field>
       <mat-card-actions>
-        <button mat-raised-button [disabled]="form.invalid" type="submit" color="primary">login</button>
+        <button mat-raised-button  type="submit" color="primary">login</button>
       </mat-card-actions>
     </form>
 
