--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
+<header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="'/'"><svg width="2em" height="2em" viewBox="0 0 16 16" class="nav-bar navbar-brand bi bi-cart4" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
     <path fill-rule="evenodd" d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
@@ -5,6 +6,7 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <a class="nav-item nav-link text-dark " [ngClass]="{'hide':!IsloggedIn()&&link.title.toLowerCase()=='addproduct'||IsloggedIn()&&(link.title.toLowerCase()=='login'||link.title.toLowerCase()=='signup')}"  *ngFor="let link of links" [routerLink]="link.path" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" >
@@ -16,7 +18,10 @@
   <div class="nav navbar-nav ml-auto">
     <button mat-button class="" style="background: dodgerblue;color:whitesmoke" *ngIf="IsloggedIn()" (click)="logoutUser()">logout</button>
   </div>
+
 </nav>
+  <h1 mat-line class="text-center"><span class="bg">Product Management Appg</span></h1>
+</header>
 
 
 <!--
