--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,8 @@
 }
 
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color:antiquewhite !important;
+}
