little bit of styling

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
   </div>
 
 </nav>
-  <h1 mat-line class="text-center"><span class="bg">Product Management Appg</span></h1>
+  <h1 mat-line class="text-center"><span class="bg">Product Management App</span></h1>
 </header>
 
 
