--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -13,7 +13,8 @@
   </thead>
   <tbody>
   <tr *ngFor="let product of products">
-    <td ><img [src]="product.imageUrl" *ngIf="showImage" [title]="product.productName" height="100px" width="100px"></td>
+
+    <td ><img src='{{baseUrl}}/images/{{product.imageUrl}}' *ngIf="showImage" [title]="product.productName" height="100px" width="100px"></td>
     <td>{{product.productName}}</td>
     <td>{{product.productCode}}</td>
     <td>{{product.releaseDate}}</td>
